...
        android:textColor="@color/brown"
        android:fontFamily="@font/nunito_sans"
        android:textSize="45sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logout"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="LOGIN"
        android:backgroundTint="@color/beige"
        android:fontFamily="@font/nunito_sans"
        android:textColor="@color/brown"
        android:textSize="20sp" />

    <Button
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:backgroundTint="@color/beige"
        android:fontFamily="@font/nunito_sans"
        android:onClick="logout"
        android:text="Logout"
        android:textColor="@color/brown"
        android:textSize="20sp" />

    <Button
        android:id="@+id/deleteaccount"
        android:layout_width="wrap_content"
...
