...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/budgetLimit"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:fontFamily="@font/nunito_sans"
        android:padding="10dp"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_budget_list"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_weight="18"
        android:scrollbars="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/addCategoryButton"
            android:layout_width="181dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="2dp"
            android:layout_weight="25"
            android:textColor  = "@color/brown"
            android:fontFamily="@font/nunito_sans"
            android:text="Add Category"
            android:textSize="12dp" />



        <Button
            android:id="@+id/back"
...
